--- a/src/renderer/styles/styles.css
+++ b/src/renderer/styles/styles.css
@@ -168,7 +168,7 @@
   justify-content: center;
   
   background: hsl(0, calc(1 * 0%), 0%);
-  background-color: rgba(0, 0, 0, .85);
+  background-color: var(--bg-modal-overlay);
 }
 
 .modal {
